k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: sk016-maintq-fe-svc
    namespace: skala3-ai1
spec:
    selector:
        app: sk016-maintq-fe
    ports:
        - protocol: TCP
          port: 8001
          targetPort: 8001
    type: ClusterIP
