k8s/ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: sk016-maintq-fe-ingress-canary
    namespace: skala3-ai1
    annotations:
        nginx.ingress.kubernetes.io/canary: 'true'
        nginx.ingress.kubernetes.io/canary-weight: '10'
spec:
    ingressClassName: public-nginx
    rules:
        - host: sk016-maintq-fe.project.skala-ai.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: sk016-maintq-fe-svc-v2
                            port:
                                number: 8001
