k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: sk016-maintq-fe-ingress-test
    namespace: skala3-ai1
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
    ingressClassName: public-nginx
    rules:
        - host: sk016-maintq-fe.project.skala-ai.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: sk016-maintq-fe-svc
                            port:
                                number: 8001
    tls:
        - hosts:
              - sk016-maintq-fe.project.skala-ai.com
          secretName: sk016-maintq-fe-tls
